[tool.poetry]
name = "snapshotter-periphery-epochsyncer"
version = "0.1.0"
description = "releases epochs to snapshotter-core workers when preloads are satisfied"
authors = ["Anomit <anomit@powerloom.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
web3 = "^7.10.0"
pydantic = "^2.11.3"
python-dotenv = "^1.1.0"
loguru = "^0.7.3"
tenacity = "^9.1.2"
redis = "^5.2.1"
dramatiq = "^1.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
