[tool.poetry]
name = "rate-limiter"
version = "0.1.0"
description = "Simple rate limiting service"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10.16"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
slowapi = "^0.1.8"
dotenv = "^0.9.9"
pydantic = "^2.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
